--- a/push-android/DroiPush/SDK/res/layout/dp_download_notification_layout.xml
+++ b/push-android/DroiPush/SDK/res/layout/dp_download_notification_layout.xml
@@ -39,7 +39,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:singleLine="true"
-                android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent.Title" />
+                android:textAppearance="@style/dp_notification_title_style" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -79,7 +79,7 @@
                     android:layout_height="wrap_content"
                     android:singleLine="true"
                     android:ellipsize="end"
-                    android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent" />
+                    android:textAppearance="@style/dp_notification_summary_style" />
             </FrameLayout>
 
             <LinearLayout
