--- a/push-android/DroiPush/SDK/res/layout/dp_push_notification_layout.xml
+++ b/push-android/DroiPush/SDK/res/layout/dp_push_notification_layout.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:singleLine="true"
-                android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent.Title" />
+                android:textAppearance="@style/dp_notification_title_style" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:maxLines="2"
-                android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent" />
+                android:textAppearance="@style/dp_notification_summary_style" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
