--- a/push-android/DroiPush/SDK/res/values/dp_styles.xml
+++ b/push-android/DroiPush/SDK/res/values/dp_styles.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <!-- Notification title style -->
     <style name="dp_notification_title_style" parent="@android:style/TextAppearance.StatusBar.EventContent.Title">
     </style>
@@ -9,7 +8,7 @@
     </style>
 
     <!-- Style to show floating and translucent activity -->
-    <style name="DroiDialogStyle" parent="@android:style/Theme.Dialog">
+    <style name="droi_dialog_activity_style" parent="@android:style/Theme.Dialog">
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowNoTitle">true</item>
@@ -18,5 +17,4 @@
         <item name="android:backgroundDimAmount">0</item>
         <item name="android:windowAnimationStyle">@null</item>
     </style>
-
 </resources>
